--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,6 +2,15 @@
   margin: 0;
   padding: 0;
 }
-body{
+
+body {
   background: #fff;
 }
+
+news-list {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(500px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+}
+/*# sourceMappingURL=index.css.map */
