--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -6,4 +6,14 @@ body {
   background: #fff;
 }
 
-
+main {
+  display: grid;
+  grid-template-columns: 850px 1fr;
+  max-width: 1150px;
+  margin: 1rem auto;
+  gap: 10px;
+}
+.aside-container {
+  border: olive solid 1px;
+  padding: 10px;
+}
