--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -17,3 +17,9 @@ main {
   border: olive solid 1px;
   padding: 10px;
 }
+
+@media only screen and (max-width: 992px) {
+  main {
+    grid-template-columns: 1fr;
+  }
+}
