handling error image

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -28,4 +28,10 @@ main {
         grid-template-columns: 1fr;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  main {
+    max-width: 680px;
+  }
+}
 /*# sourceMappingURL=index.css.map */
