--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -23,3 +23,9 @@ main {
     grid-template-columns: 1fr;
   }
 }
+
+@media only screen and (max-width: 768px){
+  main{
+    max-width: 680px;
+  }
+}
